# Macroeconomic-Regime-Analysis-Credit-Risk-Forecasting

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt  setup_project.py  test_logging.py
data/: credit_spread_monthly_last.csv  datamerged_macro_credit_with_regimes.csv  macroeconomic_data_merged.csv  merged_macroeconomic_credit.csv
data/original/: Consumer Price Index for All Urban Consumers All Items in U.S. City Average_CPIAUCSL.csv  Federal Funds Effective Rate _FEDFUNDS.csv  ICE BofA US High Yield Index Option-Adjusted Spread_BAMLH0A0HYM2.csv  Industrial Production Total Index_INDPRO.csv  Leading Indicators OECD Reference Series Gross Domestic Product (GDP) Original Series for the Euro Area (19 Countries)EA19LORSGPORGYSAM.csv  Unemployment Rate_UNRATE.csv  University of Michigan Consumer Sentiment_UMCSENT.csv  credit_spread_monthly_mean.csv
models/final/: pca_scaler.joblib  regime_cluster_model.joblib
models/unsupervised/: pca_scaler.joblib  regime_cluster_model.joblib
notebooks/: data_macroeconomic.ipynb
notebooks/Aadya/: dataclean.ipynb
notebooks/Yifan/:  Basic ML Time Series Models.ipynb
notebooks/old_work/: Regime detection_Unsupervise_learning.ipynb  l_r2.ipynb  lasso_ridge.ipynb  lasso_ridge_mod1.ipynb  poly_reg.ipynb
notebooks/viraj/: data_macroeconomic.ipynb  data_work.ipynb  p1_models.ipynb  p2_models.html  p2_models.ipynb  unsupervised.html  unsupervised.ipynb
notebooks/viraj/data/: centroids.csv  (+1 more)
utilities/: __init__.py  config.py  data_processing.py  functions.py  logging_config.py  model_utils.py
(+1 files in other folders)
