[project]
name = "macroeconomic-regime-analysis-credit-risk"
version = "0.1.0"
description = ""
authors = [
    {name = "Viraj Parmaj",email = "viraj.parmaj89@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "xgboost (>=2.1.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
